tests/baselines/reference/asyncClass_es6.errors.txt
asyncClass_es6.ts(1,1): error TS1042: 'async' modifier cannot be used here.


==== asyncClass_es6.ts (1 errors) ====
    async class C {  
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }